# blinding-ray

./: README.md  notes.txt  setup.cfg  setup.py
scripts/: example.py  test_open_spiel_env.py  test_reconchess_env.py  train_mceirl_rbc.py
src/blinding_ray/: __init__.py
src/blinding_ray/agents/: __init__.py
src/blinding_ray/agents/attacker/: __init__.py  attacker.py  attacker_callbacks.py  attacker_policy.py
src/blinding_ray/agents/mceirl/: README.md  __init__.py  mceirl.py  mceirl_torch_policy.py
src/blinding_ray/agents/random/: __init__.py  random.py  random_policy.py
src/blinding_ray/agents/trout/: __init__.py  trout_callbacks.py  trout_policy.py
src/blinding_ray/env/: __init__.py  open_spiel_rbc.py
src/reconchess_env/: __init__.py  reconchess_env.py
