[metadata]
name = blinding-ray
version = 0.0.1
author = acxz
description = blinding-ray description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/acxz/blinding-ray
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
